--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,16 +23,15 @@
                 <%= current_user.name %><b class="caret"></b>
               </a>
   						<ul class="dropdown-menu">
-<li><%= link_to "Your Profile", user_path(current_user.id) %></li>
-  						  <% if !current_user.favorites.empty? %>
-    						  <li class="dropdown-submenu">
-                    <a href="#">Favorites</a>
-                    <ul class="dropdown-menu">
-                      <% if !current_user.favorites.find(:all, :conditions => { :favoritable_type => 'sport' }).empty? %><li class="nav-header" id="favs_sports_header">Sport</li><% end %>
-                      <% if !current_user.favorites.find(:all, :conditions => { :favoritable_type => 'club' }).empty? %><li class="nav-header" id="favs_club_header">Clubs</li><% end %>
-                    </ul>
-                  </li>
-                <% end %>
+                <li><%= link_to "Your Profile", user_path(current_user.id) %></li>
+                <div id="beforeFavs">
+                  <!-- This is the beginning of the delete thingy.-->
+                </div>
+                
+                <!-- This is where it adds in favorties, everything in here will be deleted on run of the function.-->
+                <div id="afterFavs">
+                  <!-- This is where the JQuery deletes to. It will fill the space between "before" and "after" with favorites, assuming the user has favorites. -->
+                </div>
   						  <% if can? :manage, :all %>
                   <li><%= link_to "Admin Interface", "/admin" %></li>
                 <% else %>
