--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,14 @@
     <%= render 'layouts/header' %>
     <%= yield :above_container %>
     <div class="container">
+    <div id="myModal" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="myModal" aria-hidden="true" style = "height: 500px; width: 600px; margin-left: -300px;">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+          <h3 id="myModalLabel">Konami Code!</h3>
+        </div>
+        <div class="modal-body" style = "height: 100% !important;">
+        </div>
+      </div>
       <%= yield %>
       
       <%= debug(params) if Rails.env.development? %>
