Club announcements are now done in a slightly less retarded way.
Or at least.. I hope it's less retarded.

--- a/app/views/clubs/index.html.erb
+++ b/app/views/clubs/index.html.erb
@@ -18,11 +18,7 @@
     <h1>Club Announcements</h1>
     
     <div class = "offset1">
-    <% @all.each do |announcement| %>
-    
-      <li> <%= announcement.content %> </li>
-    
-    <% end %>
+      <%=raw @announcements.content %>
     </div>
   </div>
 </div>
