Profile Styling beta

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
+
+<!--
 <div id="wrap" style = "margin-bottom: 15px;"
 	<p id="notice"><%= notice %></p>
-	<div class = "span2" style = "background-color: white;position: static; border-radius: 5px; box-shadow: 0 0 6px 0; margin-bottom: 15px;">
+	<div class = "span3" style = "background-color: white;position: static; border-radius: 5px; box-shadow: 0 0 6px 0; margin-bottom: 15px;">
 		<div style = "height: 100px; width: 100px; margin-left: auto; margin-right: auto; margin-top: 10px;">
 			<% if @user.avatar_file_name.nil? %>
 				<%= image_tag "default_pic.png" %>
@@ -9,16 +11,52 @@
 			<% end %>
 		</div>
 		<div id = "userinfo" style = "margin-left: 15px;">
-			Name: <%= @user.name.titleize %> <br />
-			Age: <%= @user.age.to_s %><br />
-			Birthday: <%= @user.birthday %><br />
-			Hobbies/Interests: <%= @user.interests%><br />
+			<b>Name: </b><%= @user.name.titleize %> <br />
+			<b>Age: </b><%= @user.age.to_s %><br />
+			<b>Birthday: </b><%= @user.birthday %><br />
+			<b>Hobbies/Interests: </b><%= @user.interests%><br />
 		</div>
 	</div>
-	<div class = "span9" style = "background-color: #fff; margin-top: 10px; border-radius: 5px; box-shadow: 0 0 6px 0; margin-bottom: 15px;">
+	<div class = "span8" style = "background-color: #fff; margin-top: 10px; border-radius: 5px; box-shadow: 0 0 6px 0; margin-bottom: 15px;">
 		<div style = "margin: 5px 10px 5px 10px;">
-			<h3><%= @user.name.titleize %>'s Bio</h3>
+			<div style = " text-align: center;">
+				<h3><%= @user.name.titleize %>'s Bio</h3>
+			</div>
 			<%= @user.bio %>
 		</div>
 	</div>
-</div>
+</div> -->
+
+
+<body>
+	<div class = "span12" style = "background-color: white;position: static; border-radius: 5px; box-shadow: 0 0 6px 0; margin-bottom: 15px;">
+		<div class = "row">
+			<div class = "span4">
+				<% if @user.avatar_file_name.nil? %>
+				<%= image_tag "default_pic.png" , style: "padding-left:30px; padding-bottom:15px; padding-top:10px;"%>
+				<% else %>
+				
+				<% end %>
+			</div>
+			<h1 class = "span7" style = "padding-top:60px"><%= @user.name %>'s Profile</h1>
+		</div>
+		<div class = "row">
+			<div class = "span12">
+				<div class = "span3" style = "background-color: white; border-radius: 5px; box-shadow: 0 0 6px 0; margin-bottom: 15px;">
+					<div id = "userinfo" style = "margin-left: 15px;">
+						<b>Name: </b><%= @user.name.titleize %> <br />
+						<b>Age: </b><%= @user.age.to_s %><br />
+						<b>Birthday: </b><%= @user.birthday %><br />
+						<b>Hobbies/Interests: </b><%= @user.interests%><br />
+					</div> <!--Text for info-->
+				</div> <!--span3 for info-->
+				<div class = "span8" style = "background-color: white; border-radius: 5px; box-shadow: 0 0 6px 0; margin-bottom: 15px;">
+					<div style = "margin-left: 15px;">
+						<h3 style = "text-align:center;"><%= @user.name %>'s Bio</h3>
+						<%= @user.bio %>
+					</div><!--Bio span8-->
+				</div>
+			</div> <!--span12-->
+		</div>
+	</div>
+</body>
