no more titleize

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,7 +44,7 @@
 			<div class = "span12">
 				<div class = "span3" style = "background-color: white; border-radius: 5px; box-shadow: 0 0 6px 0; margin-bottom: 15px;">
 					<div id = "userinfo" style = "margin-left: 15px;">
-						<b>Name: </b><%= @user.name.titleize %> <br />
+						<b>Name: </b><%= @user.name %> <br />
 						<b>Age: </b><%= @user.age.to_s %><br />
 						<b>Birthday: </b><%= @user.birthday %><br />
 						<b>Hobbies/Interests: </b><%= @user.interests%><br />
