--- a/app/views/clubs/index.html.erb
+++ b/app/views/clubs/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title do %>HF Clubs<% end %>
+
 <% content_for :css do %>
   <%= stylesheet_link_tag    "clubs", :media => "all" %>
 <% end %>
