--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title do %><%= @club.name %> | HF Clubs<% end %>
 <% content_for :css do %>
   <%= stylesheet_link_tag    "clubs", :media => "all" %>
   <style type="text/css">
