More pages now have dynamic titles.

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title do %>Sign Up<% end %>
 <% content_for :css do %>
   <%= stylesheet_link_tag "jasny-bootstrap" %>
   <style type="text/css">
