--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title do %><%= @user.name %> | Users<% end %>
 <div id="wrap" style = "margin-bottom: 15px;"
 	<p id="notice"><%= notice %></p>
 	<div class = "span2" style = "background-color: white;position: static; border-radius: 5px; box-shadow: 0 0 6px 0; margin-bottom: 15px;">
