Made the clubs more user friendly, unfortunately.
Slug is now set automatically on creation of the club, and category can now be assigned with a simple dropdown. Also, I made the club "Show" pages insert the raw content.
We all know how much I just LOVE the users, right?

--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -43,7 +43,7 @@
       </div>
     <% end %>
 		<div class = 'offset1' style = "clear: both;">
-			<%= @club.content %>
+			<%=raw @club.content %>
 
 		</div>
 	</div>
