--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,16 +4,24 @@
 				<div class="important_links span4 offset2">
 					<span id="footerTitle">Important Links</span>
 					<ul>
-						<li><%= link_to "About Page", about_path %></li>
+						<a href="/buses/map"><li>Bus Map</li></a>
 						<li><%= link_to "The Harbinger Team", harbingerteam_path %></li>
-						<li><%= link_to "Get Involved", get_involved_path %></li>
+						<li><%= link_to "About Site", about_path %></li>
 					</ul>
 				</div> <!-- end "important" -->
 				<div class="contact span4">
-					<span id="footerTitle">Contact The Harbinger</span>
-					<a href="https://twitter.com/HFHarbingerNews" class="twitter-follow-button" data-show-count="false" data-size="large" data-dnt="true">Follow @HFHarbingerNews</a>
-			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-					<div class="facebook"><iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2FTheHarbingerOnline&amp;width=292&amp;height=62&amp;colorscheme=light&amp;show_faces=false&amp;border_color&amp;stream=false&amp;header=true&amp;appId=155202897905169" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:292px; height:62px;" allowTransparency="true"></iframe></div>
+					<span id="footerTitle">HF Navigator Mobile Application</span>
+					Harborfields Navigator is an app designed by students, for students. This application provides vital information and communication services for students as well as parents. Brought to you by The Harborfields Mobile Computing Club
+						<div class="row" style="padding-left:30px">
+							
+							<a style="padding-top:-10px" href="https://play.google.com/store/apps/details?id=com.hhs.hfnavigator">
+	  							<img alt="Get it on Google Play"
+	       						src="https://developer.android.com/images/brand/en_generic_rgb_wo_45.png" />
+							</a>
+							
+							<a href="https://itunes.apple.com/us/app/hf-navigator/id652649379?mt=8&uo=4" target="itunes_store"style="display:inline-block;overflow:hidden;background:url(http://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_appstore-lrg.png) no-repeat;width:135px;height:40px;@media only screen{background-image:url(http://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_appstore-lrg.svg);}"></a>
+							
+						</div>
 				</div><!-- end "contact" -->
 			</div>
 		</div><!-- end "container"-->
