--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,5 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<div class="span6 offset3" id="teampage">
+	<h1>About This Website</h1>
+	<h5>Version 1.0</h5>
+	<p>Developed by Alex LaFroscia, Brian Kelley, and Jake Dombrower</p>
+</div>
