Changed Busmap URL
It has come to my attention that the harbinger-hosted bus map will not
be used until 9/25. For now the Google Docs version will be used.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
 				<div class="important_links span4 offset2">
 					<span id="footerTitle">Important Links</span>
 					<ul>
-						<a href="/buses/map"><li>Bus Map</li></a>
+						<a href="http://www.vqr.mx/DmkD"><li>Bus Map</li></a>
 						<li><%= link_to "The Harbinger Team", harbingerteam_path %></li>
 						<li><%= link_to "About Site", about_path %></li>
 					</ul>
