--- a/app/views/buses/_form.html.erb
+++ b/app/views/buses/_form.html.erb
@@ -38,7 +38,7 @@
     <div class="span3"><%= f.label :seventeen %><%= f.text_field :seventeen %></div>
     <div class="span3"><%= f.label :eighteen %><%= f.text_field :eighteen %></div>
     <div class="span3"><%= f.label :nineteen %><%= f.text_field :nineteen %></div>
-    <div class="span3"></div>
+    <div class="span3"><%= f.label :twenty %><%= f.text_field :twenty %></div>
   </div>
 
   <div class="actions">
