--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,7 +11,7 @@
 				</div> <!-- end "important" -->
 				<div class="contact span4">
 					<span id="footerTitle">HF Navigator Mobile Application</span>
-					Harborfields Navigator is an app designed by students, for students. This application provides vital information and communication services for students as well as parents. Brought to you by The Harborfields Mobile Computing Club. Availible on the <a href="https://itunes.apple.com/us/app/hf-navigator/id652649379?mt=8&ign-mpt=uo%3D4">iOS App Store</a> or <a href "https://play.google.com/store/apps/details?id=com.hhs.hfnavigator">Google Play</a>.
+					Harborfields Navigator is an app designed by students, for students. This application provides vital information and communication services for students as well as parents. Brought to you by The Harborfields Mobile Computing Club. Availible on the <a href="https://itunes.apple.com/us/app/hf-navigator/id652649379?mt=8&ign-mpt=uo%3D4">iOS App Store</a> or <a href="https://play.google.com/store/apps/details?id=com.hhs.hfnavigator">Google Play</a>.
 					
 				</div><!-- end "contact" -->
 			</div>
