--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
 <div class="span6 offset3" id="teampage">
 	<h1>About This Website</h1>
 	<h5>Version 1.0.1</h5>
-	<p>Developed by Alex LaFroscia, Brian Kelley, and Jake Dombrower in association with the Harborfileds Mobile Computing Club</p>
+	<p>Developed by Alex LaFroscia, Brian Kelley, and Jake Dombrower in association with the Harborfields Mobile Computing Club</p>
 </div>
