--- a/app/views/buses/map.html.erb
+++ b/app/views/buses/map.html.erb
@@ -117,6 +117,10 @@
       left: 20px;
       top: 62px;
     }
+    #extra {
+      left: 100px;
+      top: 120px;
+    }
     .bus-left {
       background-color: green;
       border: solid 1px black;
@@ -128,21 +132,15 @@
   </style>
 <% end %>
 
-<!-- Deleted JS:
-<% content_for :js do %>
-  <script type="text/javascript">
-    $(function() {
-      $('.bus').filter(function(index) {
-        return !$(this).is(':empty');
-      }).css('background-color', 'gold').css('border', 'solid 1px black');
-    });
-  </script>
 
-<% end %>
 
--->
+
+
+
 <div id="wrapper">
   <h1>Bus Map for <%= @created %></h1>
+  <h4 style="text-align: center; color: green;">Buses on the left of the entrance:<%= @bus.thirteen %>,<%= @bus.fourteen %>,<%= @bus.fifteen %>,<%= @bus.sixteen %>,<%= @bus.seventeen %>,<%= @bus.eighteen %>,<%= @bus.nineteen %>,<%= @bus.twenty %>,</h4>
+  <h4 style="text-align: center; color: gold;">Busses on the right of the entrance:<%= @bus.one %>,<%= @bus.two %>,<%= @bus.three %>,<%= @bus.four %>,<%= @bus.five %>,<%= @bus.six %>,<%= @bus.seven %>,<%= @bus.eight %>,<%= @bus.nine %>,<%= @bus.ten %>,<%= @bus.eleven %>,<%= @bus.twelve %>,</h4>
   <div id="map">
     <div class="bus bus-right" id="one"><%= @bus.one %></div>
     <div class="bus bus-right" id="two"><%= @bus.two %></div>
@@ -164,6 +162,7 @@
     <div class="bus bus-left" id="eighteen"><%= @bus.eighteen %></div>
     <div class="bus bus-left" id="nineteen"><%= @bus.nineteen %></div>
     <div class="bus bus-left" id="twenty"><%= @bus.twenty %></div>
+
   </div>
   <p id="updated">Last updated at: <%= @updated %></p>
 </div>
