--- a/app/views/buses/map.html.erb
+++ b/app/views/buses/map.html.erb
@@ -140,7 +140,7 @@
 <div id="wrapper">
   <h1>Bus Map for <%= @created %></h1>
   <h4 style="text-align: center; color: green;">Buses on the left of the entrance:<%= @bus.thirteen %>,<%= @bus.fourteen %>,<%= @bus.fifteen %>,<%= @bus.sixteen %>,<%= @bus.seventeen %>,<%= @bus.eighteen %>,<%= @bus.nineteen %>,<%= @bus.twenty %>,</h4>
-  <h4 style="text-align: center; color: gold;">Busses on the right of the entrance:<%= @bus.one %>,<%= @bus.two %>,<%= @bus.three %>,<%= @bus.four %>,<%= @bus.five %>,<%= @bus.six %>,<%= @bus.seven %>,<%= @bus.eight %>,<%= @bus.nine %>,<%= @bus.ten %>,<%= @bus.eleven %>,<%= @bus.twelve %>,</h4>
+  <h4 style="text-align: center; color: gold;">Buses on the right of the entrance:<%= @bus.one %>,<%= @bus.two %>,<%= @bus.three %>,<%= @bus.four %>,<%= @bus.five %>,<%= @bus.six %>,<%= @bus.seven %>,<%= @bus.eight %>,<%= @bus.nine %>,<%= @bus.ten %>,<%= @bus.eleven %>,<%= @bus.twelve %>,</h4>
   <div id="map">
     <div class="bus bus-right" id="one"><%= @bus.one %></div>
     <div class="bus bus-right" id="two"><%= @bus.two %></div>
