--- a/app/views/buses/map.html.erb
+++ b/app/views/buses/map.html.erb
@@ -121,6 +121,12 @@
       left: 100px;
       top: 120px;
     }
+    #mainent {
+      padding-right: 600px;
+      padding-top: 430px;
+      color: white;
+      font-weight: bold;
+    }
     .bus-left {
       background-color: green;
       border: solid 1px black;
@@ -139,8 +145,9 @@
 
 <div id="wrapper">
   <h1>Bus Map for <%= @created %></h1>
+    <h4 style="text-align: center; color: gold;">Buses on the right of the entrance:<%= @bus.one %>,<%= @bus.two %>,<%= @bus.three %>,<%= @bus.four %>,<%= @bus.five %>,<%= @bus.six %>,<%= @bus.seven %>,<%= @bus.eight %>,<%= @bus.nine %>,<%= @bus.ten %>,<%= @bus.eleven %>,<%= @bus.twelve %>,</h4>
   <h4 style="text-align: center; color: green;">Buses on the left of the entrance:<%= @bus.thirteen %>,<%= @bus.fourteen %>,<%= @bus.fifteen %>,<%= @bus.sixteen %>,<%= @bus.seventeen %>,<%= @bus.eighteen %>,<%= @bus.nineteen %>,<%= @bus.twenty %>,</h4>
-  <h4 style="text-align: center; color: gold;">Buses on the right of the entrance:<%= @bus.one %>,<%= @bus.two %>,<%= @bus.three %>,<%= @bus.four %>,<%= @bus.five %>,<%= @bus.six %>,<%= @bus.seven %>,<%= @bus.eight %>,<%= @bus.nine %>,<%= @bus.ten %>,<%= @bus.eleven %>,<%= @bus.twelve %>,</h4>
+
   <div id="map">
     <div class="bus bus-right" id="one"><%= @bus.one %></div>
     <div class="bus bus-right" id="two"><%= @bus.two %></div>
@@ -162,8 +169,10 @@
     <div class="bus bus-left" id="eighteen"><%= @bus.eighteen %></div>
     <div class="bus bus-left" id="nineteen"><%= @bus.nineteen %></div>
     <div class="bus bus-left" id="twenty"><%= @bus.twenty %></div>
+    <p id="mainent">Main Entrance</p>
 
   </div>
+  <p style="padding-left:150px">*Starred buses have not arrived yet</p>
   <p id="updated">Last updated at: <%= @updated %></p>
 </div>
     
