--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,7 +21,7 @@
     <% end %>
   	
     <div class="row-fluid" id="announcements">
-  		<h3>Today's Announcements</h3>
+  		<h3><a href="https://sites.google.com/site/harborfieldshs/">Today's Announcements</a></h3>
   		 <p><%=raw @announcement.content %></p>
   	</div>
   	<div id="memos_wrapper">
