--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -37,10 +37,7 @@
 					  		<h2><%= sport.title %></h2>
 				  			<div class="holder">
 				  				<div class="pull-left">
-									<h3><a href="/sports/<%= sport.slug %>">Varsity</a></h3>
-								</div>
-								<div class="pull-right">
-									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
+									<h3><a href="/sports/<%= sport.slug %>">Click to view sport</a></h3>
 								</div>
 							</div>
 						</div>
@@ -54,10 +51,7 @@
 					  		<h2><%= sport.title %></h2>
 				  			<div class="holder">
 				  				<div class="pull-left">
-									<h3><a href="/sports/<%= sport.slug %>">Varsity</a></h3>
-								</div>
-								<div class="pull-right">
-									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
+									<h3><a href="/sports/<%= sport.slug %>">Click to view sport</a></h3>
 								</div>
 							</div>
 						</div>
@@ -71,23 +65,14 @@
 					  		<h2><%= sport.title %></h2>
 				  			<div class="holder">
 				  				<div class="pull-left">
-									<h3><a href="/sports/<%= sport.slug %>">Varsity</a></h3>
+									<h3><a href="/sports/<%= sport.slug %>">Click to view sport</a></h3>
 								</div>
-								<div class="pull-right">
-									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
-								</div>
-							</div>
 						</div>
 					</div>
 					<% end %>
 				</div>
 		  </div><!-- end "tab-content" -->
 		</div>
-		  
-	  <div class="span4 hidden-phone" id="recent_events">
-			<div class="well">
-			  <h3>Recent Events</h3>
-			</div>
 	  </div>
   </div>
 </div>
