--- a/app/views/sports/show.html.erb
+++ b/app/views/sports/show.html.erb
@@ -92,7 +92,7 @@
 				    <td><%= game.time %></td>
 				    <td><%= game.opponent %></td>
 				    <td><% if game.is_home %>Home<% else %>Away<% end %></td>
-				    <td><%= game.score %>
+				    <td><%= game.score %></td>
 				  </tr>
 				  <% end %>
 				</tbody>
