--- a/app/views/sports/show.html.erb
+++ b/app/views/sports/show.html.erb
@@ -121,13 +121,16 @@
 				</thead>
 				<tbody>
 				  <% @sport.games.each do |game| %>
-				  <tr <% if game.status == "win"%> class="success" <% elsif game.status == "loss" %> class="error" <% end %>>
-				    <td><%= game.date.strftime("%a, %b %d, %Y") %></td>
-				    <td><%= game.time %></td>
-				    <td><%= game.opponent %></td>
-				    <td><% if game.is_home %>Home<% else %>Away<% end %></td>
-				    <td><%= game.score %></td>
-				  </tr>
+					  <% if game.is_varsity %>
+						  <tr <% if game.status == "win"%> class="success" <% elsif game.status == "loss" %> class="error" <% end %>>
+						    <td><%= game.date.strftime("%a, %b %d, %Y") %></td>
+						    <td><%= game.time %></td>
+						    <td><%= game.opponent %></td>
+						    <td><% if game.is_home %>Home<% else %>Away<% end %></td>
+						    <td><%= game.score %></td>
+						  </tr>
+					  <% else %>
+					  <% end %>
 				  <% end %>
 				</tbody>
 			</table>
@@ -145,13 +148,17 @@
 				</thead>
 				<tbody>
 				  <% @sport.games.each do |game| %>
-				  <tr <% if game.status == "win"%> class="success" <% elsif game.status == "loss" %> class="error" <% end %>>
-				    <td><%= game.date.strftime("%a, %b %d, %Y") %></td>
-				    <td><%= game.time %></td>
-				    <td><%= game.opponent %></td>
-				    <td><% if game.is_home %>Home<% else %>Away<% end %></td>
-				    <td><%= game.score %></td>
-				  </tr>
+					  <% if game.is_varsity %>
+						  
+					  <% else %>
+					  	<tr <% if game.status == "win"%> class="success" <% elsif game.status == "loss" %> class="error" <% end %>>
+						    <td><%= game.date.strftime("%a, %b %d, %Y") %></td>
+						    <td><%= game.time %></td>
+						    <td><%= game.opponent %></td>
+						    <td><% if game.is_home %>Home<% else %>Away<% end %></td>
+						    <td><%= game.score %></td>
+						  </tr>
+					  <% end %>
 				  <% end %>
 				</tbody>
 			</table>
