Time Pushed Left

--- a/app/views/buses/map.html.erb
+++ b/app/views/buses/map.html.erb
@@ -35,7 +35,8 @@
     #updated {
       float: right;
       clear: both;
-      margin-right: 10%;
+      padding-right: 150px;
+      border-bottom: 0px;
     }
     #one {
       left: 815px;
