--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,10 @@
         <div class="modal-body" style = "height: 100% !important;">
         </div>
       </div>
+
+      <% flash.each do |name, message| %>
+        <%= content_tag :div, message, :id => "flash_#{name}" %>
+      <% end %> 
       <%= yield %>
       
       <%= debug(params) if Rails.env.development? %>
