--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,5 @@
-<h1><%= article.title %></h1>
-<p><%= article.body %></p>
+<h1><%= @article.title %></h1>
+<p><%= @article.body %></p>
 <p>
-	<%= link_to 'Edit', edit_article_path(@article) %>
-	<%= link_to 'Delete', @article, :confirm => "Confirm?", :method => :delete %>
 
 </p>
