--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -67,6 +67,7 @@
 				  				<div class="pull-left">
 									<h3><a href="/sports/<%= sport.slug %>">Click to view sport</a></h3>
 								</div>
+							</div>
 						</div>
 					</div>
 					<% end %>
