Improved Front-End

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,4 @@
-<h1><%= @article.title %></h1>
-<p><%= @article.body %></p>
-<p>
-
-</p>
+<div class="container" id="articleview">
+	<h1 style="text-align:center;"><%= @article.title %></h1>
+	<p><%= @article.body %></p>
+</div>
