--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,8 @@
-<h1>Index For Articles</h1>
-<% @articles.each do |article| %>
-	<p>
-		<%= link_to article.title, article %>
-	</p>
-<% end %>
-<p> <%= link_to "Add Article", new_article_path %> </p>
+<div class="container" id="articleview">
+	<h1>Index For Articles</h1>
+	<% @articles.each do |article| %>
+		<h2>
+			<%= link_to article.title, article %>
+		</h2>
+	<% end %>
+</div>
