--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,7 @@
   					<li id="nav_home"><%= link_to "Home", root_path %></li>
   					<li id="nav_sports"><%= link_to "Sports", sports_path %></li>
   					<li id="nav_clubs"><%= link_to "Clubs", clubs_path %></li>
+            <li id="nav_news"><%= link_to "News" , articles_path %> </li>
   				</ul>
   				<ul class="nav pull-right visible-desktop">
 					<% if signed_in? %>
