--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,12 +1,33 @@
-<% content_for :js do %>
-  <%= javascript_include_tag "articles" %>
-<% end %>
+<script type="text/javascript">
+
+$(function() {
+  // Add "active" to nav bar
+  $('#nav_news').addClass('active');
+
+});
+
+</script>
 
 <div class="container" id="articleview">
 	<h1 style="text-align:center;">Tornado News Articles</h1>
-	<% @articles.each do |article| %>
-		<h2>
-			<%= link_to article.title, article %>
-		</h2>
-	<% end %>
+	<table class="table">
+				<thead>
+					<tr>
+						<th>Title</th>
+						<th>Author</th>
+						<th>Description</th>
+						<th>Date Created</th>
+					</tr>
+				</thead>
+				<tbody>
+				  <% @articles.each do |article| %>
+				  	<tr>
+					  	<td><%= link_to article.title, article %></td>
+						<td><%= article.author %></td>
+						<td><%= article.description %></td>
+						<td><%= article.created_at.strftime("%m/%d/%Y") %></td>
+					</tr>
+				  <% end %>
+				</tbody>
+	</table>
 </div>
