Added :photosfield to clubs controller

--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -53,7 +53,7 @@
         </div>
       </div>
       <div class="tab-pane limited-width" id="photos">
-          Photos
+          <%=raw @club.photosfield %>
       </div>
     </div>
   </div>
