--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,23 +24,35 @@
   		<h3><a href="https://sites.google.com/site/harborfieldshs/">Today's Announcements</a></h3>
   		 <p><%=raw @announcement.content %></p>
   	</div>
-  	<div id="memos_wrapper">
-    	<div id="memos">
-      <div id="slider">
-  	    <% @memos.each do |memo| %>
-  	      <% if memo.is_image %>
-  	      
-  	      <% else %>
-  	      <div class="memo" style="background-color: #<%= memo.bg_color %>; color: <% unless memo.text_color.nil? %>#<%= memo.text_color %><% else %>black<% end %>;">
-  	        <h2><%= memo.title %></h2>
-  	        <%=raw memo.content %>
-  	      </div>
-  	      <% end %>
-  	    <% end %>
+  	<div id="slider" class="carousel slide row-fluid">
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="http://placehold.it/850x550">
+          <div class="carousel-caption">
+            <h4>Heading 1</h4>
+            <p>Content for Carousel Content 1</p>
+          </div>
         </div>
       </div>
-      <%= image_tag('buttons/Next.png', id: "advance") %>
-      <%= image_tag('buttons/Prev.png', id: 'reverse') %>
+      <div class="item">
+          <img src="http://placehold.it/850x550">
+          <div class="carousel-caption">
+            <h4>Heading 2</h4>
+            <p>Content for Carousel Content 2</p>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+          <img src="http://placehold.it/850x550">
+          <div class="carousel-caption">
+            <h4>Heading 3</h4>
+            <p>Content for Carousel Content 3</p>
+          </div>
+        </div>
+      </div>
+      <a class="right carousel-control" href="slider" data-slide="prev">&lsaquo</a>
+      <a class="left carousel-control" href="slider" data-slide="next">&rsaquo</a>
+
     </div>
   	<div class="row-fluid" id="events">
   		<div class="span6">
