--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,11 +7,7 @@
 
 <div id="all">
   <div class="container-fluid" id="stuff">
-  	<div class="row-fluid"><!-- header -->
-  		<div class="span12" id="header">
-  			<h1>Harborfields High School</h1>
-  		</div>
-  	</div><!-- end header -->
+
     
     <% flash.each do |type, message| %>
       <div class="alert <%= bootstrap_class_for(type) %> fade in">
@@ -20,39 +16,43 @@
       </div>
     <% end %>
   	
+  <div id="myCarousel" class="carousel slide">
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+  <!-- Carousel items -->
+  <div class="carousel-inner">
+    <div class="active item">
+      <img src="<%= image_path('entrance.png') %>">
+      <div class="carousel-caption">
+      <h4>Welcome to Harbinger News!</h4>
+      <p>The official website of the Harborfields News Team</p>
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://placehold.it/940x338">
+      <div class="carousel-caption">
+      <h4>Slide 2</h4>
+      <p>Hello World</p>
+      </div>    
+    </div>
+    <div class="item">
+      <img src="http://placehold.it/940x338">
+      <div class="carousel-caption">
+      <h4>Slide 3</h4>
+      <p>Hello World</p>
+      </div> 
+    </div>
+  </div>
+  <!-- Carousel nav -->
+  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+</div>
     <div class="row-fluid" id="announcements">
-  		<h3><a href="https://sites.google.com/site/harborfieldshs/">Today's Announcements</a></h3>
-  		 <p><%=raw @announcement.content %></p>
-  	</div>
-  	<div id="slider" class="carousel slide row-fluid">
-      <div class="carousel-inner">
-        <div class="item active">
-          <img src="http://placehold.it/850x550">
-          <div class="carousel-caption">
-            <h4>Heading 1</h4>
-            <p>Content for Carousel Content 1</p>
-          </div>
-        </div>
-      </div>
-      <div class="item">
-          <img src="http://placehold.it/850x550">
-          <div class="carousel-caption">
-            <h4>Heading 2</h4>
-            <p>Content for Carousel Content 2</p>
-          </div>
-        </div>
-      </div>
-      <div class="item">
-          <img src="http://placehold.it/850x550">
-          <div class="carousel-caption">
-            <h4>Heading 3</h4>
-            <p>Content for Carousel Content 3</p>
-          </div>
-        </div>
-      </div>
-      <a class="right carousel-control" href="slider" data-slide="prev">&lsaquo</a>
-      <a class="left carousel-control" href="slider" data-slide="next">&rsaquo</a>
-
+      <h3><a href="https://sites.google.com/site/harborfieldshs/">Today's Announcements</a></h3>
+       <p><%=raw @announcement.content %></p>
     </div>
   	<div class="row-fluid" id="events">
   		<div class="span6">
