Fall Sports Active

--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -23,8 +23,8 @@
 <div id="center">
 	<ul class="nav nav-tabs affix-top container" data-spy="affix" data-offset-top="60" id="seasonsswitcher">
 		<li id="firsttab"><a></a></li>
-		<li><a href="#fall" data-toggle="tab">Fall</a></li>
-		<li class="active"><a href="#winter" data-toggle="tab">Winter</a></li>
+		<li class="active"><a href="#fall" data-toggle="tab">Fall</a></li>
+		<li><a href="#winter" data-toggle="tab">Winter</a></li>
 		<li><a href="#spring" data-toggle="tab">Spring</a></li>
 	</ul>
 	<div class="row-fluid">
