--- a/app/views/sports/show.html.erb
+++ b/app/views/sports/show.html.erb
@@ -62,18 +62,7 @@
 		</div>
 		<div class="tab-pane limited-width" id="photos">
 			<div class="row-fluid">
-				<div class="span3">
-					<a href="http://placehold.it/700x700" class="lightbox" title="Test"><img src="http://placehold.it/186x150" /></a>
-				</div>
-				<div class="span3">
-					<a href="http://placehold.it/700x700" class="lightbox" title="Test2"><img src="http://placehold.it/186x150" /></a>
-				</div>
-				<div class="span3">
-					<a href="http://placehold.it/700x700" class="lightbox" title="Test3"><img src="http://placehold.it/186x150" /></a>
-				</div>
-				<div class="span3">
-					<a href="http://placehold.it/700x700" class="lightbox" title="Test4"><img src="http://placehold.it/186x150" /></a>
-				</div>
+				<h2><a href="http://www.goo.gl/IktEX8"> Click Here to View Photos</a></h2>
 			</div>
 		</div>
 		<div class="tab-pane limited-width" id="videos">
