changed sports photos url

--- a/app/views/sports/show.html.erb
+++ b/app/views/sports/show.html.erb
@@ -62,7 +62,7 @@
 		</div>
 		<div class="tab-pane limited-width" id="photos">
 			<div class="row-fluid">
-				<h2><a href="http://www.goo.gl/IktEX8"> Click Here to View Photos</a></h2>
+				<h2><a href="http://www.goo.gl/HdSzt0"> Click Here to View Photos</a></h2>
 			</div>
 		</div>
 		<div class="tab-pane limited-width" id="videos">
